# DropBeam

./: .gitignore  DEPLOY.md  FEATURES.md  FORK.md  LICENSE  README.md  SETUP.md  bunfig.toml  package.json  render.yaml  tsconfig.base.json
.claude/: settings.local.json
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/kotlin/com/dropbeam/: FileTransfer.kt  NearbyTransfer.kt  SignalingClient.kt  WebRTCFallback.kt
apps/cli/: package.json
apps/cli/src/: fsIo.ts  index.ts  nodeDCAdapter.ts  peerFactory.ts  peerHandshake.ts  recv.ts  send.ts  weriftAdapter.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  mdns.rs  tray.rs
apps/ios/DropBeam/: FileTransfer.swift  NearbyTransfer.swift  Podfile  SignalingClient.swift  WebRTCFallback.swift
apps/quic-relay/: Cargo.toml
apps/quic-relay/src/: main.rs  protocol.rs  receiver.rs  sender.rs  tls.rs
apps/signaling/: Dockerfile  package.json  tsconfig.json
apps/signaling/src/: codes.ts  rateLimit.ts  room.ts  server.ts
apps/signaling/test/: codes.test.ts  rateLimit.test.ts  server.test.ts
apps/web/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/web/public/: manifest.webmanifest  robots.txt  sitemap.xml  sw.js
apps/web/src/: main.ts  qr.ts  styles.css  vite-env.d.ts
scripts/: e2e.sh
