[package]
name = "dropbeam-quic"
version = "0.1.0"
edition = "2021"
description = "DropBeam QUIC LAN transport — zero-RTT P2P file transfer over UDP"

[[bin]]
name = "dropbeam-quic"
path = "src/main.rs"

[dependencies]
# QUIC
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"            # self-signed cert for LAN (no CA needed)

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Shared transfer logic
dropbeam-transfer-core = { path = "../../packages/transfer-core", default-features = false, features = ["native"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"

# Misc
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
