[package]
name = "dropbeam-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "dropbeam_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

# mDNS for LAN device discovery
mdns-sd = "0.11"

# QUIC for LAN transfers (reuse our binary logic)
dropbeam-transfer-core = { path = "../../packages/transfer-core", default-features = false, features = ["native"] }

# Async
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
gethostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }
which = "6"
